--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.189"
-tokio = "1.33.0"
+tokio = { version = "1", features = ["full"] }
+warp = "0.3"
